# era-connect

./: .gitignore  README.md  justfile
.github/: dependabot.yml
.github/workflows/: build.yml  pr-comment.yml  test.yml
app/: .gitignore  flutter_rust_bridge.yaml  pubspec.yaml
app/assets/: era_connect_app_icon.icns
app/assets/i18n/: en-US.json  en_us.json  zh-TW.json  zh_tw.json
app/lib/: bridge_definitions.dart  bridge_generated.dart  bridge_generated.io.dart  bridge_generated.web.dart  main.dart
app/lib/api/: config_api.dart  ffi.dart  lib.dart
app/lib/api/authentication/: authentication_api.dart  lib.dart
app/lib/api/collection/: collection_api.dart  lib.dart
app/lib/api/config/: config_api.dart  lib.dart  ui_layout.dart
app/lib/api/meta/: lib.dart  meta_api.dart
app/lib/api/storage/: account_storage.dart  lib.dart  storage_api.dart  ui_layout.dart
app/lib/components/: step_dialog.dart
app/lib/dialog/: login_account_dialog.dart  setup_dialog.dart
app/lib/dialog/create_collection/: collection_game_mode.dart  collection_information.dart  create_collection_dialog.dart
app/lib/dialog/setup/: collection_addition.dart  collection_game_mode.dart  collection_information.dart  import_profiles.dart  login_account.dart  setup_dialog.dart
app/lib/pages/: main_page.dart
app/lib/src/rust/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
app/lib/src/rust/api/: collection.dart  download.dart
app/lib/src/rust/api/authentication/: account.dart  msa_flow.dart
app/lib/src/rust/api/backend_exclusive/mod_management/: mods.dart  mods.freezed.dart
app/lib/src/rust/api/backend_exclusive/storage/: account_storage.dart  account_storage.freezed.dart  global_settings.dart  global_settings.freezed.dart  storage_loader.dart  ui_layout.dart  ui_layout.freezed.dart
app/lib/src/rust/api/backend_exclusive/vanilla/: launcher.dart  version.dart  version.freezed.dart
app/lib/src/rust/api/shared_resources/: collection.dart  entry.dart
app/lib/src/rust/api/shared_resources/authentication/: account.dart  msa_flow.dart  msa_flow.freezed.dart
app/lib/src/rust/api/storage/: account_storage.dart  account_storage.freezed.dart  ui_layout.dart
app/lib/src/rust/api/vanilla/: version.dart  version.freezed.dart
app/linux/: CMakeLists.txt  my_application.cc
app/macos/: Podfile
app/macos/Runner/: bridge_generated.h
app/macos/Runner.xcodeproj/: project.pbxproj
app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
app/macos/Runner/Configs/: AppInfo.xcconfig
app/native/: Cargo.toml  bacon.toml
app/native/crates/struct-key-value-pair/: bacon.toml
app/native/crates/struct-key-value-pair/src/: lib.rs
app/native/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  bridge_generated.web.rs  macro.rs
app/native/src/api/: download.rs  forge.rs  launch.rs  logger.rs  minecraft.rs  quilt.rs  vanilla.rs
app/native/src/api/authentication/: account.rs  flow.rs  mod.rs  msa_flow.rs
app/native/src/api/collection/: mod.rs
app/native/src/api/config/: account_storage.rs  config_loader.rs  config_state.rs  macros.rs  mod.rs  ui_layout.rs
app/native/src/api/download/: assets.rs  library.rs  mod.rs  rules.rs  util.rs
app/native/src/api/storage/: account_storage.rs  mod.rs  storage_loader.rs  storage_state.rs  ui_layout.rs
app/native/src/api/vanilla/: assets.rs  library.rs  manifest.rs  rules.rs  version.rs
app/native/struct-key-value-pair/: Cargo.toml
app/native/struct-key-value-pair/src/: lib.rs
app/rust/: Cargo.toml
app/rust/crates/struct-key-value-pair/: Cargo.toml
app/rust/src/: api.rs  frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs
app/rust/src/api/: download.rs  forge.rs  mod.rs  vanilla.rs
app/rust/src/api/authentication/: msa_flow.rs
app/rust/src/api/backend_exclusive/: download.rs  mod.rs
app/rust/src/api/backend_exclusive/mod_management/: mods.rs
app/rust/src/api/backend_exclusive/modding/: forge.rs  library.rs  mod.rs  quilt.rs
app/rust/src/api/backend_exclusive/storage/: account_storage.rs  global_settings.rs  mod.rs  storage_loader.rs  storage_state.rs  ui_layout.rs
app/rust/src/api/backend_exclusive/vanilla/: assets.rs  launcher.rs  library.rs  manifest.rs  mod.rs  rules.rs  version.rs
app/rust/src/api/shared_resources/: collection.rs  entry.rs  mod.rs
app/rust/src/api/shared_resources/authentication/: account.rs  mod.rs  msa_flow.rs
app/rust/src/api/storage/: account_storage.rs  storage_state.rs  ui_layout.rs
app/rust/src/api/vanilla/: assets.rs  library.rs  rules.rs
app/test/: test_util.dart  widget_test.dart
app/test/dialog/setup/: login_account_test.dart  login_account_test.mocks.dart
app/test/pages/: main_page_test.dart  main_page_test.mocks.dart
app/windows/: CMakeLists.txt
app/windows/runner/: Runner.rc  flutter_window.cpp  main.cpp  win32_window.cpp
