[package]
name = "rust_lib"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
struct-key-value-pair = { path = "crates/struct-key-value-pair" }
anyhow = { version = "1.0.74", features = ["backtrace"] }
bytes = "1.4.0"
color-eyre = "0.6.2"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
dirs = "5.0.1"
error-chain = "0.12.4"
flutter_rust_bridge = { version = ">=2.0.0-dev.7", features = [
    "uuid",
] }
futures = "0.3.28"
glob = "0.3.1"
hex = "0.4.3"
os-version = "0.2.0"
reqwest = { version = "=0.11.20", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.105" }
sha1 = "0.10.5"
tokio = { version = "1.31.0", features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "sync",
    "process",
] }
tokio-stream = "0.1.14"
zip = "0.6.6"
log = "0.4"
chrono = { version = "0.4.26", features = ["serde"] }
fern = "0.6.2"
oauth2 = "4.4.1"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
image = "0.24.7"
serde_with = { version = "3.3.0", features = ["chrono"] }
rand = "0.8.5"
regex = "1.9.5"
dashmap = "5.5.3"
once_cell = "1.19.0"
