[package]
name = "struct-key-value-pair"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
quote = "1.0.32"
syn = { version = "2.0.28", features = ["full"] }

[lib]
proc-macro = true
path = "src/lib.rs"
